# opencv

./: CMakeLists.txt  canny_edge_detection.cpp  canny_edge_detection.h  erosion_dilation.cpp  erosion_dilation.h  lighten_darken.cpp  lighten_darken.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  panorama_stitching.cpp  panorama_stitching.h  resizing.cpp  resizing.h
